<resources>
    <string name="app_name">Affirm Samples Java</string>
    <string name="checkout">Checkout</string>
    <string name="vcn_checkout">VCN Checkout</string>
    <string name="launch_site_modal">Launch Site Modal</string>
    <string name="product_site_modal">Product Site Modal</string>
    <string name="track_order_confirmed">Track Order Confirmed</string>
    <string name="clear_cookies">Clear Cookies</string>
    <string-array name="vcn_checkout_new_flow_array">
        <item>New Credit Card</item>
        <item>Show Credit Card</item>
    </string-array>
    <string name="fragment_usages">Fragments Usages</string>
</resources>
