<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.affirm.android.AffirmPromotionButton
        android:id="@+id/promo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginVertical="20dp"
        android:layout_marginTop="20dp"
        app:affirmColor="AffirmColorTypeBlue"
        app:affirmLogoType="AffirmDisplayTypeLogo"
        app:affirmTextColor="@android:color/black"
        app:affirmTextFont="@font/apercu_bold"
        app:affirmTextSize="@dimen/affirm_promotion_size"
        app:htmlStyling="false" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/checkout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkout" />

        <Button
            android:id="@+id/vcnCheckout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vcn_checkout" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/siteModalButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/launch_site_modal" />

        <Button
            android:id="@+id/productModalButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_site_modal" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>